[gd_scene load_steps=10 format=2]

[ext_resource path="res://Script/Boss.gd" type="Script" id=1]
[ext_resource path="res://Sprite/NiceNightie.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Sprite/Ideias/Portugues/bossSS.png" type="Texture" id=3]
[ext_resource path="res://Sprite/Ideias/Portugues/boss fase 2.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 42
extra_spacing_char = 2
font_data = ExtResource( 2 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.4582, 14.0217 )

[sub_resource type="Animation" id=3]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Fase1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fase2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=4]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Fase1:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fase2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 53.2982
height = 37.7283

[node name="Boss" type="Area2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]

[node name="RichTextLabel" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = 20.0
margin_right = 450.0
margin_bottom = 62.0
custom_fonts/normal_font = SubResource( 1 )
text = "Cama"
scroll_active = false

[node name="RichTextLabel2" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = 20.0
margin_right = 450.0
margin_bottom = 62.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.992157, 1, 0, 1 )
visible_characters = 0
text = "Cama"
scroll_active = false

[node name="RichTextLabel3" type="RichTextLabel" parent="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 50.0
margin_top = 20.0
margin_right = 450.0
margin_bottom = 62.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 0, 0, 1 )
text = "Cama"
scroll_active = false

[node name="LineEdit" type="LineEdit" parent="Control"]
margin_left = 218.223
margin_top = 318.025
margin_right = 276.224
margin_bottom = 342.025

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 248.195, 63.6825 )
scale = Vector2( 3, 3 )
shape = SubResource( 2 )

[node name="Fase1" type="Sprite" parent="."]
position = Vector2( 248.195, 63.6825 )
scale = Vector2( 3, 3 )
texture = ExtResource( 3 )
vframes = 5
frame = 4
__meta__ = {
"_edit_group_": true
}

[node name="Fase2" type="Sprite" parent="."]
visible = false
position = Vector2( 249.233, 71.2634 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
vframes = 5
frame = 4

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 248.948, 149.641 )
current = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Attack = SubResource( 3 )
anims/Idle = SubResource( 4 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -1.80499, -6.3175 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 250.895, 45.1251 )
shape = SubResource( 5 )
[connection signal="text_changed" from="Control/LineEdit" to="." method="_on_LineEdit_text_changed"]
